--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,5 +1,8 @@
-/* general styles the apply to the whole app */
+/* general styles the apply to the whole app
+
+
 * {
+  
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -33,4 +36,9 @@ h3 {
   margin: auto;
   color: rgb(66, 171, 231);
   font-size: 20px;
+} */
+
+*{
+  background-color: black;
 }
+
