fixed colors and picture

--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -93,3 +93,12 @@ img {
   color: black;
   font-size: 20px;
 }
+.font{
+  color: #ffffff;
+}
+.cont{
+  background-color: grey;
+}
+.topname{
+  color: red;
+}
