--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -123,7 +123,7 @@ a{
 
 }
 
-.cardbody {
+.cardbody, .cardinfo {
   margin-left: auto;
  margin-right: auto;
  
@@ -132,6 +132,9 @@ a{
   text-align: center;
 }
 
+.contactmecontainer{
+  color: black;
+}
 
 @media only screen and (max-width: 600px) {
   .jumbotron h1 {
